Generalize usage of openapi between front and back
